--- a/index.html
+++ b/index.html
@@ -14,7 +14,13 @@
   <body>
         <header>
       <nav class="navbar navbar-expand-md navbar-light fixed-top bg-light">
-        <a class="navbar-brand" href="#">SEVEN TALKS</a>
+        
+        <div id="sevennav" class="col-7 col-sm-3 col-md-3 col-lg-3 col-xl-3">
+                <a class="navbar-brand mr-5 mr-md-2" href="http://seventalks.com.br">
+                    <img class="img-fluid" src="img/SEVENTALKS.png" alt="Seven Talks" title="Seven Talks">
+                </a>
+            </div>
+        </div>
         
       </nav>
     </header>
