--- a/index.html
+++ b/index.html
@@ -47,19 +47,24 @@
             <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 140x140"><title>Placeholder</title><rect width="100%" height="100%" fill="#4A40FF"/><text x="50%" y="50%" fill="#777" dy=".3em"></text></svg>
             <h2>PALESTRANTE</h2>
             <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
-            <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+            <button<a href="#"><img src="img/linkedin.png"></a></button>
+            <button<a href="#"><img src="img/instagram.png"></a></button>      
           </div><!-- /.col-lg-4 -->
           <div class="col-lg-4">
             <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 140x140"><title>Placeholder</title><rect width="100%" height="100%" fill="#4A40FF"/><text x="50%" y="50%" fill="#777" dy=".3em"></text></svg>
             <h2>PALESTRANTE</h2>
             <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
-            <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+             <div class="top-info text-center">
+	                <button<a href="#"><img src="img/linkedin.png"></a></button>
+                  <button<a href="#"><img src="img/instagram.png"></a></button>
+	            </div>
           </div><!-- /.col-lg-4 -->
           <div class="col-lg-4">
             <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 140x140"><title>Placeholder</title><rect width="100%" height="100%" fill="#4A40FF"/><text x="50%" y="50%" fill="#777" dy=".3em"></text></svg>
             <h2>PALESTRANTE</h2>
             <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
-            <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+            <button<a href="#"><img src="img/linkedin.png"></a></button>
+            <button<a href="#"><img src="img/instagram.png"></a></button>     
           </div><!-- /.col-lg-4 -->
         </div><!-- /.row -->
     
