centralizacao contagem bootstrap

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <h2 class="featurette-heading" style="text-align: center;">Faltam...</h2>
 
             <div class="contagem">
-                <table class="text-align"><tr><td><div class="numero" id="dia"></div></td></td><td><div class="numero" id="hora"></div></td><td><div class="numero" id="minuto"></div></td><td><div class="numero" id="segundo"></div></td></tr>
+                <table class="contagem"><tr><td><div class="numero" id="dia"></div></td></td><td><div class="numero" id="hora"></div></td><td><div class="numero" id="minuto"></div></td><td><div class="numero" id="segundo"></div></td></tr>
                 <tr style="height:20px"><td><p class="legenda">Dias</p></td><td><p class="legenda">Horas</p></td><td><p class="legenda">Min</p></td><td><p class="legenda">Seg</p></td></tr></table>
                 
                 </table>
