mudança layout botão lembrete

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
       <div id="mc_embed_signup_scroll">
         <h2 class="featurette-heading" style="text-align: center;">Quer receber um lembrete por email?</h2><br>
   <div class="mc-field-group text-center">
-    <input type="email" value="" name="EMAIL"  style="text-align: center; width: 80%; border-color: #494FC6; border-radius: 10.6757px;" placeholder="Insira seu melhor Email" class="required email" id="mce-EMAIL">
+    <input type="email" value="" name="EMAIL"  style="text-align: center; width: 45%; border-color: #494FC6; border-radius: 10.6757px;" placeholder="Insira seu melhor Email" class="required email" id="mce-EMAIL">
   </div>
     <div id="mce-responses" class="clear">
       <div class="response" id="mce-error-response" style="display:none"></div>
@@ -120,8 +120,8 @@
       <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_bb5b7a7afce39f518b68b8725_951c5890c3" tabindex="-1" value=""></div>
       <div class="clear text-center">
         <br>
-        <input type="submit" style="text-align: center; width: 80%; color: #fff; background: linear-gradient(90deg, #8B09FF 13.78%, #8B09FF 157.52%);
-        border-radius: 15.6757px;" value="Enviar Lembrete" name="subscribe" id="mc-embedded-subscribe" class="button btn-lg"></div>
+        <input type="submit" style="text-align: center; width: 25%; min-width: fit-content; color: #fff; background: linear-gradient(90deg, #8B09FF 13.78%, #8B09FF 157.52%);
+        border-radius: 15.6757px;" value="Enviar Lembrete" name="subscribe" id="mc-embedded-subscribe" class="button "></div>
       </div>
   </form>
   </div>
