min-width: fit-content no campo email

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
       <div id="mc_embed_signup_scroll">
         <h2 class="featurette-heading" style="text-align: center;">Quer receber um lembrete por email?</h2><br>
   <div class="mc-field-group text-center">
-    <input type="email" value="" name="EMAIL"  style="text-align: center; width: 45%; border-color: #494FC6; border-radius: 10.6757px;" placeholder="Insira seu melhor Email" class="required email" id="mce-EMAIL">
+    <input type="email" value="" name="EMAIL"  style="text-align: center; width: 45%; min-width: fit-content; border-color: #494FC6; border-radius: 10.6757px;" placeholder="Insira seu melhor Email" class="required email" id="mce-EMAIL">
   </div>
     <div id="mce-responses" class="clear">
       <div class="response" id="mce-error-response" style="display:none"></div>
