--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <header>
       <nav class="navbar navbar-expand-md navbar-light fixed-top bg-light">
         
-        <div id="sevennav" class="col-7 col-sm-3 col-md-3 col-lg-3 col-xl-3">
-                <a class="navbar-brand mr-5 mr-md-2" href="http://seventalks.com.br">
+        <div id="sevennav" >
+                <a class="navbar-brand" href="http://seventalks.com.br">
                     <img class="img-fluid" src="img/SEVENTALKS.png" alt="Seven Talks" title="Seven Talks">
                 </a>
             </div>
@@ -144,7 +144,7 @@
     
       <!-- FOOTER -->
       <footer class="container">
-        <p class="float-right"><a href="#">Voltar ao Topo</a></p>
+        <p class="float-right" ><a id="topo" href="#">Voltar ao Topo</a></p>
         <p>Todos os direitos reservados</p>
       </footer>
     </main>
