otimizacao seo, sitemap e robots

--- a/index.html
+++ b/index.html
@@ -6,19 +6,40 @@
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
   new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
   j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-  'https://www.googletagmanager.com/gtm.js?id=%27+i+dl;f.parentNode.insertBefore(j,f);
+  'https://www.googletagmanager.com/gtm.js?id=%27+i+dl;f.parentNode.insertBefore(j,f)
   })(window,document,'script','dataLayer','GTM-KJ828P8');</script>
   <!-- End Google Tag Manager -->
+
+   <!-- Tags de seo -->
+   <meta property="og:title" content="SevenTalks">
+   <meta property="og:site_name" content="Tableless">
+   <meta property="og:description" content=" Educação online com qualidade">
+   <meta property="og:image" content="	http://seventalks.com.br">
+   <meta property="og:site_name" content="SevenTalks">
+   <meta property="og:url" content="https://seventalks.com.br">
+
+   <meta name="robots" content="index, follow">
+   <meta name="title" content="Seven Talks">
+   <meta name="description" content="Você gostaria de ter mais gestão financeira e saúde emocional em períodos de crise? Então clique aqui e se garanta seu lugar na live!">
+   <meta name="keywords" content="climática, previsão climática, desenvolvimento, tempo, clima,"/>
+   <link rel="canonical" href="https://seventalks.com.br">
   
   <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+    <link rel="alternate" href="https://seventalks.com.br" hreflang="pt-br" />
+    <link rel="alternate" href="https://seventalks.com.br" hreflang="x-default"/>
+
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
 
-    <title>Seven Talks</title>
+    <!-- FONT AWESOME -->
+   <script src="https://kit.fontawesome.com/bf7e05c402.js" crossorigin="anonymous"></script>
+
+
+    <title>Educação online com qualidade | SevenTalks</title>
   </head>
   <body>
       <!-- Google Tag Manager (noscript) -->
