favicon e atualizacao de foto de palestrante

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   src="https://www.facebook.com/tr?id=705789606818201&ev=PageView&noscript=1"
 /></noscript>
 <!-- End Facebook Pixel Code -->
-    <link rel="shortcut icon" href="img/icon.png" />
+    <link rel="shortcut icon" href="img/favicon.png" />
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
@@ -185,7 +185,7 @@
           </div><!-- /.col-lg-4 -->
           <div class="col-lg-6" style= "margin: auto;">
             <div class="top-info text-center">
-            <img class="bd-placeholder-img rounded-circle" style= "margin: auto;"width="140" height="140" src="img/palestrante4.jpg"><title>Ian Alone</title><rect width="100%" height="100%" fill="#4A40FF"/><text x="50%" y="50%" fill="#777" dy=".3em"></text></img>  
+            <img class="bd-placeholder-img rounded-circle" style= "margin: auto;"width="140" height="140" src="img/palestrante5.jpg"><title>Ian Alone</title><rect width="100%" height="100%" fill="#4A40FF"/><text x="50%" y="50%" fill="#777" dy=".3em"></text></img>  
                       <h2 class="nomePalestrante">Ian Alone</h2>
             <p class="bioPalestrante">Empresario e consultor financeiro.</p>
           </div>
