atualizacao de foto de palestrante

--- a/index.html
+++ b/index.html
@@ -185,9 +185,9 @@
           </div><!-- /.col-lg-4 -->
           <div class="col-lg-6" style= "margin: auto;">
             <div class="top-info text-center">
-            <img class="bd-placeholder-img rounded-circle" style= "margin: auto;"width="140" height="140" src="img/palestrante5.jpg"><title>Ian Alone</title><rect width="100%" height="100%" fill="#4A40FF"/><text x="50%" y="50%" fill="#777" dy=".3em"></text></img>  
+            <img class="bd-placeholder-img rounded-circle" style= "margin: auto;"width="140" height="140" src="img/palestrante4.jpg"><title>Ian Alone</title><rect width="100%" height="100%" fill="#4A40FF"/><text x="50%" y="50%" fill="#777" dy=".3em"></text></img>  
                       <h2 class="nomePalestrante">Ian Alone</h2>
-            <p class="bioPalestrante">Empresario e consultor financeiro.</p>
+            <p class="bioPalestrante">Empresário e consultor financeiro.</p>
           </div>
              <div class="top-info text-center">
 	                <button<a href="#"><img src="img/linkedin_a.png"></a></button>
