--- a/index.html
+++ b/index.html
@@ -177,10 +177,9 @@
             <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="img/palestrante3.jpeg"><title>Letícia Godinho</title><rect width="100%" height="100%" fill="#4A40FF"/><text x="50%" y="50%" fill="#777" dy=".3em"></text></img>
             <h2 class="nomePalestrante">Letícia Godinho</h2>
             <p class="bioPalestrante">Analista de investimentos na Vérios Investimentos.</p>
-            <img style="list-style: none; margin: auto;"><a href="https://www.instagram.com/coerenciaemocional" target="_blank"><img src="img/linkedin_a.png"></a>   
-            <BR>     
+            <img style="list-style: none; margin: auto;"><a href="https://www.instagram.com/coerenciaemocional" target="_blank"><img src="img/linkedin_a.png"></a>     
           </div>
-          </div><!-- /.col-lg-4 -->
+          </div><br><br><!-- /.col-lg-4 -->
           <div class="col-lg-6" style= "margin: auto;">
             <div class="top-info text-center">
             <img class="bd-placeholder-img rounded-circle" style= "margin: auto;"width="140" height="140" src="img/palestrante5.jpg"><title>Ian Alone</title><rect width="100%" height="100%" fill="#4A40FF"/><text x="50%" y="50%" fill="#777" dy=".3em"></text></img>  
