quem somos inserido texto

--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
           <div class="row featurette">
             <div class="col-md-12">
              
-              <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+              <p class="lead">Nós somos a Seven Talks, uma startup brasileira que está buscando democratizar a informação de qualidade. Através da nossa curadoria de conteúdo, você ter um lugar para aprender sobre os mais diversos assuntos, como por exemplo: <br>- Finanças pessoais; <br>- Saúde Mental; <br> - Empreendedorismo; </p>
             </div>
            
           </div>
