correção de bug

--- a/index.html
+++ b/index.html
@@ -138,9 +138,9 @@
         </div>
         <div class="row">
           <img class="img_rec_r" src="img/Rec_r.png" alt="" title="">
-          <div class="col-lg-6"style= "margin: auto;">
+          <div class="col-lg-6">
             <div class="top-info text-center">
-            <img class="bd-placeholder-img rounded-circle" style= "margin: auto;"width="140" height="140" src="img/palestrante1.png"><title>Dra. Linda Vieira </title><rect width="100%" height="100%" fill="#4A40FF"/><text x="50%" y="50%" fill="#777" dy=".3em"></text></img>
+            <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="img/palestrante1.png"><title>Dra. Linda Vieira </title><rect width="100%" height="100%" fill="#4A40FF"/><text x="50%" y="50%" fill="#777" dy=".3em"></text></img>
             <h2 class="nomePalestrante">Dra. Linda Vieira</h2>
             <p class="bioPalestrante">Especialista e Parceira no aplicativo de emagrecimento Tecnonutri. </p>
             <img style="list-style: none; align-content: center;"><a href="https://www.instagram.com/linndavieira" target="_blank"><img src="img/instagram.png"></a> 
@@ -148,12 +148,12 @@
             
             <BR>  
           </div><!-- /.col-lg-4 -->
-          <div class="col-lg-6"style= "margin: auto;">
+          <div class="col-lg-6">
             <div class="top-info text-center">
-            <img class="bd-placeholder-img rounded-circle" style= "margin: auto;"width="140" height="140" src="img/palestrante2.png"><title>Dra. Adriana de Araújo</title><rect width="100%" height="100%" fill="#4A40FF"/><text x="50%" y="50%" fill="#777" dy=".3em"></text></img>
+            <img class="bd-placeholder-img rounded-circle" width="140" height="140" src="img/palestrante2.png"><title>Dra. Adriana de Araújo</title><rect width="100%" height="100%" fill="#4A40FF"/><text x="50%" y="50%" fill="#777" dy=".3em"></text></img>
                        <h2 class="nomePalestrante">Dra. Adriana de Araújo</h2>
             <p class="bioPalestrante"> Psicóloga no Brasil e em Portugal, escritora e palestrante internacional.</p>
-            <img style="list-style: none; margin: auto;"><a href="https://www.instagram.com/coerenciaemocional" target="_blank"><img src="img/linkedin.png"></a>
+            <img style="list-style: none; margin: auto;"><a href="https://www.instagram.com/coerenciaemocional" target="_blank"><img src="img/instagram.png"></a>
                 
 	            </div>
           </div><!-- /.col-lg-4 -->
