footer redes sociais

--- a/index.html
+++ b/index.html
@@ -281,6 +281,18 @@
     
       <!-- FOOTER -->
       <footer class="container">
+
+        <div class="redes_sociais col-md-12" >           
+          <a href="https://www.facebook.com/Seven-Talks-101574281676763
+          https://www.instagram.com/_seventalks/"> <i class="fa fa-facebook" aria-hidden="true" style="color:#4A40FF;"></i><a>
+
+          <a href="https://instagram.com/_seventalks"> <i class="fa fa-instagram" aria-hidden="true" style="color:#4A40FF;"></i><a>
+              
+                <a href="https://t.me/seven7alks"> <i class="fa fa-telegram" aria-hidden="true" style="color:#4A40FF;"></i><a>
+
+                  <a href="https://www.youtube.com/channel/UCx6qxulhBr4UH5T70DR9_lw"> <i class="fa fa-youtube" aria-hidden="true" style="color:#4A40FF;"></i><a></a>
+          </div>
+          <br>
         <p class="float-right" ><a id="topo" href="#">Voltar ao Topo</a></p>
         <p>Todos os direitos reservados</p>
       </footer>
