mostrar pop up só uma vez

--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
       <!--pop up de saida-->
       <div id="popup" class="popup__wrapper">
         <div class="popup__container">
-          <a class="close" href="https://seventalks.com.br/">X</a>
+          <span class="close">x</span>
           <div id="mc_embed_signup">
             <form action="https://gmail.us17.list-manage.com/subscribe/post?u=bb5b7a7afce39f518b68b8725&amp;id=951c5890c3" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                 <div id="mc_embed_signup_scroll">
