atualizaçao de desginer do texto  a pedido dos hipsters

--- a/index.html
+++ b/index.html
@@ -238,9 +238,7 @@
           <div class="row featurette">
             <div class="col-md-12">
              
-              <p class="lead">Nós somos a Seven Talks, uma startup brasileira que está buscando democratizar a informação de qualidade. Através da nossa curadoria de conteúdo, você ter um lugar para aprender sobre os mais diversos assuntos, como por exemplo:</p> <br>
-              <i class="fas fa-comment-dollar"></i> <p class="lead">Finanças pessoais</p> <br><i class="fas fa-heartbeat"></i> <p class="lead">Saúde Mental</p><br><i class="fas fa-briefcase"></i> <p class="lead">Empreendedorismo</p>
-            </div>
+              <p class="lead">Nós somos a Seven Talks, uma startup brasileira que está buscando democratizar a informação de qualidade. Através da nossa curadoria de conteúdo, você ter um lugar para aprender sobre os mais diversos assuntos, como por exemplo:<b>Finanças pessoais,Saúde Mental e  Empreendedorismo</b></p>            </div>
            
           </div>
   
