--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <!-- End Google Tag Manager (noscript) -->
         <header>
-      <nav class="navbar navbar-expand-md navbar-light fixed-top bg-light">
+      <nav class="navbar navbar-expand-md navbar-light fixed-top" style="background: #fff;">
         
         <div id="sevennav" >
                 <a class="navbar-brand" href="http://seventalks.com.br">
